[package]
name = "shuftle-client-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "shuftle-client"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking", "bevy_dev_tools", "bevy_picking"] }
shuftlib = {path = "./shuftlib"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
